<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editScheduleLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".schedule.ui.EditScheduleFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editScheduleToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/editSchedule"
        app:titleTextColor="@color/textColor" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/editScheduleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editScheduleToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editSelectSubjectSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/selectASubject"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/selectASubject"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_subjects"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editSelectDaySchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/selectADay"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editSelectSubjectSchedule" />

            <TextView
                android:id="@+id/editSelectStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/selectAStartTime"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_timetable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editSelectDaySchedule" />

            <TextView
                android:id="@+id/editSelectEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/selectAnEndTime"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editSelectStartTime" />

            <TextView
                android:id="@+id/editClassroomSubjectSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/classroomOfTheSubject"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_place"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editSelectEndTime" />

            <TextView
                android:id="@+id/editProfessorNameSchedule"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="@string/teachersName"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editClassroomSubjectSchedule" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/editScheduleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_edittext_selected"
        android:text="@string/saveChanges"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>