<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/countsForGlobalSubjectBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ripple_effect"
        android:drawablePadding="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/doNotCountGeneralGrade"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/not_count_bottomsheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editSubjectBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:drawablePadding="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/editSubject"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/edit_bottomsheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countsForGlobalSubjectBottom" />

    <TextView
        android:id="@+id/deleteSubjectBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_effect"
        android:drawablePadding="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="fill_vertical"
        android:padding="20dp"
        android:text="@string/deleteSubject"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/delete_bottomsheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSubjectBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>